# crack-detector

./: .gitignore  1.0_load_and_display_data.ipynb  2.1_data_loader_PyTorch.ipynb  3.1_linearclassiferPytorch.ipynb  4.1_resnet18_PyTorch.ipynb  README.md  environment.yml  pyproject.toml  requirements.txt
app/: main.py
backend/: main.py
notebooks/: 1.0_load_and_display_data.ipynb
website/: app.py
website/templates/: index.html
