[project]
name = "crack-detector"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask==3.0.3",
    "networkx==3.3",
    "numpy==2.0.1",
    "pillow==10.4.0",
    "pyyaml==6.0.2",
    "requests==2.32.3",
    "streamlit>=1.52.2",
    "torch==2.5.1",
    "torchaudio==2.5.1",
    "torchvision==0.20.1",
]
